--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,62 @@
 /*************/
-div {
-  background-color: #defcf9;
+
+/*** 16px = 100% = 1em */
+/*font size is inherited**/
+
+a {
+  color: #11999e;
 }
 
 h1 {
+  color: #66bfbf;
+  margin-top: 50px, auto, 0, auto;
+  font-family: monospace;
+  font-size: 5em;
+}
+h2 {
+  color: #66bfbf;
   margin-top: 0;
+  font-family: "Zeyada", cursive;
+  font-size: 2.5rem;
+  font-weight: normal;
+}
+h3 {
+  color: #11999e;
+  margin-top: 0;
+  font-family: "Zeyada", cursive;
+}
+
+p {
+  font-family: "Roboto", sans-serif;
 }
 body {
   margin: 0;
+  text-align: center;
+  font-family: monospace;
+}
+
+#top-container {
+  background-color: #defcf9;
+  position: relative;
+  padding-top: 100px;
+}
+
+#middle-container {
+}
+#bottom-container {
+}
+
+.bottom-cloud {
+  position: absolute;
+  left: 500px;
+  bottom: 300px;
+}
+.top-cloud {
+  position: absolute;
+  right: 500px;
+  top: 50px;
+}
+
+.webdev {
+  text-decoration: underline;
 }
