--- a/css/style.css
+++ b/css/style.css
@@ -15,37 +15,61 @@ h1 {
 }
 h2 {
   color: #66bfbf;
-  margin-top: 0;
-  font-family: "Zeyada", cursive;
-  font-size: 2.5rem;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-family: monospace;
+  font-size: 3rem;
   font-weight: normal;
 }
 h3 {
   color: #11999e;
   margin-top: 0;
-  font-family: "Zeyada", cursive;
+  font-family: monospace;
+  font-size: 2.5rem;
 }
 
 p {
-  font-family: "Roboto", sans-serif;
+  font-family: monospace;
+  font-size: 2rem;
 }
 body {
   margin: 0;
   text-align: center;
   font-family: monospace;
+  line-height: 2;
+
 }
 
 #top-container {
   background-color: #defcf9;
   position: relative;
   padding-top: 100px;
+  margin-bottom: 30px;
+  height: 700px;
+  width: 100%;
 }
 
 #middle-container {
+  margin: 30px auto 30px auto;
 }
 #bottom-container {
+  background-color: #66BFBF;
+  padding: 40px;
+  height: 150px;
 }
 
+#footer-copyright{
+  font-size: 1.5rem;
+  color: white;
+}
+.footer-link{
+  font-size: 1.5rem;
+  text-decoration: none;
+}
+.contact-me{
+  margin: 30px auto 100px auto;
+  width: 50%;
+}
 .bottom-cloud {
   position: absolute;
   left: 500px;
@@ -59,4 +83,71 @@ body {
 
 .webdev {
   text-decoration: underline;
+}
+
+.skill-row{
+  line-height: 2;
+  margin: 100px auto 100px auto;
+  text-align: left;
+  width: 50%;
+
+ }
+
+ .skills-img1{
+  float: left;
+  width: 25%;
+  margin-right: 30px;
+ }
+
+ .skills-img2{
+  float: right;
+  width: 25%;
+  margin-left: 30px;
+
+ }
+
+ .skills-desc1{
+ }
+ .skills-desc2{
+}
+
+
+.intro{
+  text-align: center;
+  width: 50%;
+  margin: 30px auto 30px auto;
+}
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
+}
+
+hr{
+  border-style: dotted;
+  border-top: 0;
+  border-width: 10px;
+  width: 5%;
+  border-color: #EAF6F6;
 }
